Possibly fixed the background color not reaching the bottom of screen, fixed readability for login

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,13 +4,9 @@
     box-sizing: border-box;
 }
 
-body {
-    background-color: #1e2c35;
-}
-
 header {
     padding: 40px 50px;
-    background-color: #1e2c35;
+    background-color: #273a45;
 }
 
 a {
@@ -18,6 +14,15 @@ a {
 }
 
 main {
+    height: 1163px;
     padding: 50px;
     background-color: #1e2c35;
+}
+
+.form-input {
+    margin: 10px;
+}
+
+.login-btn {
+    padding: 5px 12px;
 }
